--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
-  "name": "fzf-note",
+  "name": "fzf-rdoc-note",
   "version": "1.0.0",
   "description": "fzf-note",
   "scripts": {
     "deploy": "rdoc --publish git@github.com:fzf404/note.git",
     "build": "rdoc -d C,Command,DeepLearn,Golang,HardWare,Home,Java,Linux,Others,Python,Security,Tools,Web --clean --build",
     "start": "rdoc -d C,Command,DeepLearn,Golang,HardWare,Home,Java,Linux,Others,Python,Security,Tools,Web --clean"
+  },
+  "rdoc": {
+    "favicon": "./Home/favicon.ico",
+    "logo": "./Home/rdoc.logo.svg"
   },
   "dependencies": {
     "rdoc": "1.12.x"
