--- a/package.json
+++ b/package.json
@@ -8,10 +8,16 @@
     "build": "rdoc -d C,Command,DeepLearn,Golang,HardWare,Home,Linux,Others,Python,Security,Tools,Web --clean --build"
   },
   "rdoc": {
+    "theme": "rdoc-theme-load-react",
     "favicon": "./Home/favicon.ico",
-    "logo": "./Home/rdoc.logo.svg"
+    "logo": "./Home/rdoc.logo.svg",
+    "react_modules": {
+      "Hotkeys": "react-hot-keys"
+    }
   },
   "dependencies": {
-    "rdoc": "1.12.x"
+    "rdoc": "1.12.x",
+    "rdoc-theme-load-react": "^1.1.0",
+    "react-hot-keys": "^1.1.0"
   }
 }
