--- a/.github/workflows/rdoc.yml
+++ b/.github/workflows/rdoc.yml
@@ -1,4 +1,4 @@
-name: HEXO_DEPLOY
+name: NOTE_DEPLOY
 
 on:
   push:
@@ -11,7 +11,7 @@ env:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: Ubuntu-20.04
 
     steps:
       - name: Checkout source
@@ -20,7 +20,7 @@ jobs:
       - name: Use Node.js ${{ matrix.node_version }}
         uses: actions/setup-node@v1
         with:
-          version: ${{ matrix.node_version }}
+          node-version: ${{ matrix.node_version }}
 
       - name: Setup rdoc
         env:
