🚋Feature: 展示Message & JsAjax

--- a/.github/workflows/rdoc.yml
+++ b/.github/workflows/rdoc.yml
@@ -34,8 +34,17 @@ jobs:
           git config --global user.email $GIT_USER
           git config --global user.name $GIT_EMAIL
           npm install
+          
+      - name: Note Theme
+        run: |
+          git clone https://github.com/fzf404/rdoc-theme-fzf.git
+          mv rdoc-theme-fzf/* node_modules/node_modules/rdoc/theme/default
+          
+      - name: Note build
+        run: |
+          npm run build
+          
 
       - name: Note deploy
         run: |
-          npm run build
           npm run deploy
