--- a/.github/workflows/rdoc.yml
+++ b/.github/workflows/rdoc.yml
@@ -38,6 +38,7 @@ jobs:
       - name: Note Theme
         run: |
           git clone https://github.com/fzf404/rdoc-theme-fzf.git
+          rm -rf node_modules/rdoc/theme/default/*
           mv rdoc-theme-fzf/* node_modules/rdoc/theme/default/
           
       - name: Note build
