--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "fzf-note",
   "scripts": {
     "deploy": "rdoc --publish git@github.com:fzf404/note.git",
-    "start": "rdoc -d C,Command,DeepLearn,Golang,HardWare,Home,Linux,Others,Python,Security,Web,Share --clean",
-    "build": "rdoc -d C,Command,DeepLearn,Golang,HardWare,Home,Linux,Others,Python,Security,Web,Share --clean --build"
+    "start": "rdoc -d C,Command,DeepLearn,Golang,HardWare,Home,Linux,Python,Security,Tools,Web,Share --clean",
+    "build": "rdoc -d C,Command,DeepLearn,Golang,HardWare,Home,Linux,Python,Security,Tools,Web,Share --clean --build"
   },
   "rdoc": {
     "footer": "Copyright © 2021 Powered by fzf404"
