--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "rdoc -d Command,DeepLearn,Frame,HardWare,Home,Lang,Linux,Others,Python,Security,Tools,Web --clean --build && node ./node_modules/rdoc/theme/default/search.js"
   },
   "rdoc": {
-    "footer": "Copyright © 2021 Create by <a target=\"_blank\" href=\"https://www.fzf404.top/\">fzf404</a>, Power by <a target=\"_blank\" href=\"https://webify.cloudbase.net/\">CloudBase Webify"
+    "footer": "Copyright © 2021 Create by <a target=\"_blank\" href=\"https://www.fzf404.top/\">fzf404</a>, Power by <a target=\"_blank\" href=\"https://webify.cloudbase.net/\">CloudBase Webify</a>"
   },
   "dependencies": {
     "rdoc": "1.12.x"
