--- a/.github/workflows/rdoc.yml
+++ b/.github/workflows/rdoc.yml
@@ -11,41 +11,33 @@ env:
 
 jobs:
   build:
-    runs-on: Ubuntu-20.04
+    runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout source
+      - name: Checkout
         uses: actions/checkout@v2
 
-      - name: Use Node.js ${{ matrix.node_version }}
-        uses: actions/setup-node@v1
+      - name: Node
+        uses: actions/setup-node@v2
         with:
-          node-version: ${{ matrix.node_version }}
+          node-version: "12"
 
-      - name: Setup rdoc
-        env:
-          ACTION_DEPLOY_KEY: ${{ secrets.NOTE_DEPLOY_PRI }}
-
+      - name: Setup
         run: |
-          mkdir -p ~/.ssh/
-          echo "$ACTION_DEPLOY_KEY" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan github.com >> ~/.ssh/known_hosts
-          git config --global user.email $GIT_USER
-          git config --global user.name $GIT_EMAIL
           npm install
-          
-      - name: Note Theme
+
+      - name: Theme
         run: |
           git clone https://github.com/fzf404/rdoc-theme-fzf.git
           rm -rf node_modules/rdoc/theme/default/*
           mv rdoc-theme-fzf/* node_modules/rdoc/theme/default/
-          
-      - name: Note build
+
+      - name: Build
         run: |
           npm run build
-          
 
-      - name: Note deploy
-        run: |
-          npm run deploy
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./rdoc-dist
