--- a/.github/workflows/gh-pages.yaml
+++ b/.github/workflows/gh-pages.yaml
@@ -20,7 +20,7 @@ jobs:
       - name: Node
         uses: actions/setup-node@v2
         with:
-          node-version: "12"
+          node-version: 8
 
       - name: Setup
         run: |
