--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "fzf-rdoc-note",
-  "version": "1.1.0",
-  "description": "fzf-note",
+  "version": "1.2.0",
   "scripts": {
     "start": "rdoc -d Command,DeepLearn,Frame,HardWare,Home,Lang,Others,Python,Security,Tools,Web --clean",
     "build": "rdoc -d Command,DeepLearn,Frame,HardWare,Home,Lang,Others,Python,Security,Tools,Web --clean --build && node ./node_modules/rdoc/theme/default/search.js"
@@ -10,6 +9,6 @@
     "footer": "Copyright © 2021 Create by <a target=\"_blank\" href=\"https://www.fzf404.art/\">fzf404</a>"
   },
   "dependencies": {
-    "rdoc": "1.12.x"
+    "rdoc": "1.12.0"
   }
 }
